<resources>
    <string name="app_name">Workout Logger</string>
    <string name="btn_record_wod">Record a WOD</string>
    <string name="lbl_record_a_wod">Record a WOD</string>
    <string name="lbl_wod_add_details">Additional WOD Details</string>
    <string name="lbl_available_wods">Available WODs</string>
    <string name="lbl_view_progress">View Progress</string>
    <string name="lbl_add_wod">Add WOD</string>
    <string name="lbl_wod_exercise_details">WOD Exercise Details</string>
    <string name="lbl_scan_wod">Scan WOD</string>

    <string name="lbl_todays_wod">Today\'s WOD</string>
    <string name="lbl_todays_wod_sets">5 sets of 5</string>
    <string name="lbl_todays_wod_exercise">Push Press</string>
    <string name="lbl_todays_wod_name">Murph</string>
    <string name="lbl_todays_wod_details">100 Pull Ups\n200 Push Ups\n300 Squats</string>

    <string name="warn_enter_a_date">Please enter a date</string>
    <string name="warn_no_row_inserted">An error occurred inserting a new row</string>
    <string name="warn_new_row_insert">New Row inserted</string>
    <string name="warn_enter_all_details">Please enter all required details</string>
    <string name="warn_no_details">No details to submit</string>

    <string name="error_realm_cannot_close">Could not close Realm</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>

    <string name="lbl_date">Date: </string>
    <string name="lbl_skill">Skill:  </string>
    <string name="lbl_exercise">Exercise:  </string>
    <string name="lbl_weight">Weight:  </string>
    <string name="lbl_kg">kg</string>
    <string name="lbl_add_details">Add Details:</string>
    <string name="lbl_add_exercise">Add Exercise:</string>
    <string name="lbl_details_added">Details Added</string>

    <!-- Adapter Labels -->
    <string name="lbl_wod_date">WOD Date: </string>
    <string name="lbl_wod_exercise">Movement: </string>
    <string name="lbl_wod_details">WOD: </string>
    <string name="lbl_wod_time">Time: </string>

    <string name="lbl_sets">Sets</string>
    <string name="lbl_reps">Reps</string>
    <string name="lbl_submit_details">Submit Details</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_met_con">MET-CON</string>

    <string name="msg_confirm_exercise">Confirm Captured Exercise:</string>
    <string name="msg_confirm_time">Confirm Captured Time:</string>

    <!-- Menu Titles -->
    <string name="tle_menu_communicate">Communicate</string>

    <!-- Menu Labels -->
    <string name="lbl_menu_home">Home</string>
    <string name="lbl_menu_record_a_wod">Record Wod</string>
    <string name="lbl_menu_view_progress">View Progress</string>
    <string name="lbl_menu_tools">Tools</string>
    <string name="lbl_menu_share">Share</string>

    <!-- Progress Dialog Labels -->
    <string name="default_progress_title">Please Wait</string>
    <string name="default_progress_message">Loading&#8230;</string>

    <!-- WOD Sets -->
    <string-array name="sets_array">
        <item>1 Rep MAX</item>
        <item>5 Sets of 5 Reps</item>
        <item>3 Set of 10 Reps</item>
    </string-array>

    <!-- WOD skill array -->
    <string-array name="skills_array">
        <item>Push Press</item>
        <item>Deadlift</item>
        <item>Squat</item>
        <item>Thrusters</item>
        <item>Snatch</item>
        <item>Clean</item>
        <item>Clean and Jerk</item>
        <item>Muscle Ups</item>
    </string-array>

    <!-- WOD Exercise array -->
    <string-array name="exercise_array">
        <item>Push Ups</item>
        <item>Air Squats</item>
        <item>Kettle Bell Swings</item>
        <item>Slam Balls</item>
        <item>Burpees</item>
        <item>Wall Balls</item>
    </string-array>

    <string name="msg_functionality_TBC_warning">Functionality to be implemented shortly</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="reload_questions">Reload Questions</string>

    <string name="record_wod">Record added</string>
</resources>
