<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_scan_wod"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:onClick="onScanWodClick"
            android:text="@string/lbl_scan_wod" />

        <Button
            android:id="@+id/btn_record_wod"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:onClick="onRecordWodClick"
            android:text="@string/btn_record_wod" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:onClick="onViewProgress"
            android:text="@string/lbl_view_progress" />

    </LinearLayout>
</LinearLayout>