<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.james.realmbinding.ui.main.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/today_wod_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/txt_todays_wod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_todays_wod"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/today_wod_container_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_wod_container">

        <TextView
            android:id="@+id/txt_sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_todays_wod_sets"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_todays_wod_exercise"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/txt_sets" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/today_wod_container_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_wod_container_2">

        <TextView
            android:id="@+id/txt_wod_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_todays_wod_name"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_wod_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_todays_wod_details"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/txt_wod_name" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
