<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding">

        <TextView
            android:id="@+id/header_wod_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_padding"
            android:text="@string/lbl_date"
            android:textSize="@dimen/txt_label_size" />

        <TextView
            android:id="@+id/txt_wod_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_toEndOf="@+id/header_wod_date"
            android:textSize="@dimen/txt_label_size" />

        <TextView
            android:id="@+id/header_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/header_wod_date"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/lbl_exercise"
            android:textSize="@dimen/txt_label_size" />

        <Spinner
            android:id="@+id/spinner_wod_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_wod_date"
            android:layout_margin="@dimen/normal_margin"
            android:layout_toEndOf="@+id/header_exercise"
            android:inputType="text"
            android:textSize="@dimen/txt_label_size" />

        <TextView
            android:id="@+id/header_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/header_exercise"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_padding"
            android:text="@string/lbl_weight"
            android:textSize="@dimen/txt_label_size" />

        <EditText
            android:id="@+id/txt_weight"
            style="@style/StandardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/header_exercise"
            android:layout_margin="@dimen/normal_margin"
            android:layout_toEndOf="@+id/header_exercise"
            android:inputType="numberDecimal"
            android:textSize="@dimen/txt_label_size" />

        <TextView
            android:id="@+id/header_add_details"
            style="@style/StandardTextView"
            android:layout_width="match_parent"
            android:layout_below="@+id/txt_weight"
            android:layout_margin="@dimen/normal_margin"
            android:gravity="center"
            android:hint="@string/lbl_add_details" />

        <TextView
            android:id="@+id/header_wod_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_add_details"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_padding"
            android:text="@string/lbl_wod_name"
            android:textSize="@dimen/txt_label_size" />

        <EditText
            android:id="@+id/txt_wod_details"
            style="@style/StandardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/header_add_details"
            android:layout_margin="@dimen/normal_margin"
            android:layout_toEndOf="@+id/header_wod_details"
            android:inputType="time"
            android:textSize="@dimen/txt_label_size" />

        <TextView
            android:id="@+id/header_wod_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:text="@string/lbl_wod_time"
            android:textSize="@dimen/txt_label_size"
            android:layout_alignTop="@+id/txt_wod_time"
            android:layout_alignStart="@+id/btn_add_wod" />

        <EditText
            android:id="@+id/txt_wod_time"
            style="@style/StandardTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txt_wod_details"
            android:layout_margin="@dimen/normal_margin"
            android:layout_toEndOf="@+id/header_wod_time"
            android:inputType="time"
            android:textSize="@dimen/txt_label_size" />

        <Button
            android:id="@+id/btn_add_wod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_wod_time"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/lbl_add_wod" />

    </RelativeLayout>
</LinearLayout>